--- a/Talle2/app/src/main/res/layout/activity_display_message.xml
+++ b/Talle2/app/src/main/res/layout/activity_display_message.xml
@@ -8,9 +8,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="295dp"
+        android:layout_height="112dp"
         android:text="TextView"
+        android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
